<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/cocktailbg4"
    tools:context=".RecipesFragment">

    <Button
        android:id="@+id/goToMainFromRecipesButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="16dp"
        android:text="@string/mainpage"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/searchRecipesButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="20dp"
        android:text="@string/searchRecipes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/searchRecipesBar"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/searchRecipesBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/enter_cocktail"
        android:inputType="textNoSuggestions"
        app:layout_constraintEnd_toStartOf="@+id/searchRecipesButton"
        app:layout_constraintHorizontal_bias="0.181"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TouchTargetSizeCheck,TextContrastCheck"
        android:importantForAutofill="no" />

    <ImageView
        android:id="@+id/cocktailPhoto"
        android:layout_width="171dp"
        android:layout_height="156dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="28dp"
        android:contentDescription="@string/cocktail_photo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchRecipesBar"
        tools:ignore="ImageContrastCheck"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/cocktailName"
        android:layout_width="170dp"
        android:layout_height="22dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="12dp"
        android:text="@string/strName"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cocktailPhoto"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/strCategoryText"
        android:layout_width="102dp"
        android:layout_height="32dp"
        android:layout_marginStart="11dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="112dp"
        android:text="@string/strCategory"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/cocktailPhoto"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/strGlassText"
        android:layout_width="102dp"
        android:layout_height="32dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="112dp"
        android:text="@string/strGlass"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/strCategoryText" />

    <TextView
        android:id="@+id/strInstructionsText"
        android:layout_width="199dp"
        android:layout_height="468dp"
        android:layout_marginStart="11dp"
        android:layout_marginTop="20dp"
        android:maxLines="50"
        android:scrollbars="vertical"
        android:text="@string/strInstructions"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.085"
        app:layout_constraintStart_toEndOf="@+id/cocktailPhoto"
        app:layout_constraintTop_toBottomOf="@+id/strGlassText"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/ingredientsInfoText"
        android:layout_width="163dp"
        android:layout_height="354dp"
        android:layout_marginTop="24dp"
        android:text=""
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.077"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cocktailName" />

    <Button
        android:id="@+id/addToFavorites"
        android:layout_width="69dp"
        android:layout_height="50dp"
        android:layout_marginTop="28dp"
        android:text="@string/fav"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.372"
        app:layout_constraintStart_toEndOf="@+id/strCategoryText"
        app:layout_constraintTop_toBottomOf="@+id/searchRecipesButton" />

</androidx.constraintlayout.widget.ConstraintLayout>