<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="1250px"

    tools:context=".RecipesFragment">


    <TextView
        android:id="@+id/strDrink"
        android:layout_width="150dp"
        android:layout_height="23dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="16dp"
        android:text="@string/strName"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/strType"
        android:layout_width="102dp"
        android:layout_height="32dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="96dp"
        android:text="@string/strCategory"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/strGlass"
        android:layout_width="102dp"
        android:layout_height="32dp"
        android:layout_marginStart="28dp"
        android:layout_marginBottom="8dp"
        android:text="@string/strGlass"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/strType"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/strInstructions"
        android:layout_width="186dp"
        android:layout_height="299dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:maxLines="50"
        android:scrollbars="vertical"
        android:text="@string/strInstructions"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/strIngredients"
        android:layout_width="166dp"
        android:layout_height="299dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="104dp"
        android:text="@string/ingredients"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/strDrink" />

    <Button
        android:id="@+id/deleteCocktail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/delete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.652"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/strInstructions" />


</androidx.constraintlayout.widget.ConstraintLayout>